--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,8 +30,10 @@
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/6/n11706071.md#1">大陆前体操冠军张尚武生活无着 因偷窃入狱</a><br>
 <br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733479.md#1">川普密歇根集会谈弹劾：民主党在政治自杀</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733285.md#1">中共地方融资平台恐现违约“连锁反应”</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733207.md#1">【直播预告】台湾副总统候选人电视政见会</a><br>
+<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733249.md#1">克鲁兹：弹劾案已崩溃 民主党阵脚大乱</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733304.md#1">锦州银行原董事长突离世 曾试图逃美被拦截</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733234.md#1">第一阶段贸易协议何时签署 美中怎么说</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730975.md#1">德国政要支持民众《人权问责法》在线请愿</a><br>
@@ -40,12 +42,11 @@
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732947.md#1">为学生发声 中大校长获选泰晤士高教风云人物</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733123.md#1">【新闻看点】政治闹剧？弹劾川普几无可能</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733082.md#1">华为再出局 格陵兰选爱立信打造5G网络</a><br>
-<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733043.md#1">香港再现黑衣男浮尸 双脚绑“哑铃”</a><br>
-<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730288.md#1">揽储大战 浙银行存一万元送一斤猪肉引热议</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11733311.md#1">国际人权组织吁加拿大惩罚中共电视台</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732846.md#1">中共严重介选 叶望辉：台人有守护民主的韧性</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732974.md#1">告诉人真相 法轮功学员丁宝云面临非法庭审</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731783.md#1">加拿大升级中国旅行警告：慎防中共随意执法</a><br>
+<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11730288.md#1">揽储大战 浙银行存一万元送一斤猪肉引热议</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731683.md#1">【翻墙必看】高级五毛花千芳为何遭网民嘲讽</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731966.md#1">辉山乳业被强制退市 辽宁首富成“老赖”</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11732530.md#1">西安老师连打学生耳光 家长曝全班几乎都被打</a><br>
@@ -87,9 +88,8 @@
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729907.md#1">美报告：中共操控港台媒体 破坏新闻自由</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729821.md#1">湖南新晃校园埋尸案 主犯杜少平被判死刑</a><br>
 <a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729559.md#1">中共航母山东舰交付仪式 多名高官缺席</a><br>
-<a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729423.md#1">吉林访民出狱后续遭警方骚扰 生活在恐惧中</a><br>
-<br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://d23jcbgfv6o0i.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
-<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731125.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731125.md#1">河北蠡县三任派出所所长壮年暴死</a><br>自1999到2011年，河北省蠡县鲍墟乡有 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731456.md#1">【唐靖远快评】中共战狼式大外宣频频触礁</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729410.md#1">【拍案惊奇】香港“被”字恐惧与黄色经济核弹</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728703.md#1">台湾人为大陆游客展现的独特“风景线”</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725052.md#1">美国会议员：中共将垮台 支持中国人退党</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LA7LC-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1">莱特希泽：美中协议以书面呈现 完全可执行</a><br>周二（12月17日），美国贸易代表罗伯 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1">川普若连任 北京将面对哪些经贸压力</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729036.md#1">穆迪：中国企业债务是全球经济最大威胁</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729168.md#1">A股550公司业绩预告 料过半企业亏损或下滑</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1">中共央行外汇占款连降16个月 降幅扩大</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1">中共补贴企业数据曝光 中石化和广汽获最多</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/1309022005342192-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1">美2020国防授权法案 关注中共干预台湾选举</a><br>周二（12月17日），美国参议院以86比 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728683.md#1">【直播回放】台湾立委与政党票号次抽签</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729095.md#1">确定当渣哥九龙湾店长一天 王宗尧获网民力挺</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729071.md#1">删“自由”增党控 复旦章程大变脸引炮轰</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728815.md#1">澳门迎习如临大敌 轻轨停运 运油车禁驶</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188987959-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1">受天气影响 大陆11省逾百条高速路被封闭</a><br>大陆多地因受雨雪天气、大雾天气影响 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729550.md#1">贵州煤矿事故致16死 四川渗水事故致5死</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729297.md#1">四川内江5.2级地震 周边多地有震感</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727202.md#1">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727111.md#1">贵州发生煤矿事故 致14人死亡2人被困</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726093.md#1">猪肉催生河南新首富 身家超千亿</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731608.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731608.md#1">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br>周三中午，美国众议院开始了弹劾川普 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731789.md#1">每日三退声明精选（2019/12/18）</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729514.md#1">每日三退声明精选（2019/12/17）</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1">抖音过滤内容 在美国受质疑 转往加拿大</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728888.md#1">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728758.md#1">弹劾总统民主党双重标准 麦康奈尔否决</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721510.md#1">中共基因编辑打造“超级猪” 学界痛批</a><br>中共正在基因编辑领域里“赶超世界” ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721813.md#1">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718879.md#1">造型模仿花千骨 谢娜喊话赵丽颖：续集我接演</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716545.md#1">迪士尼电影年票房破100亿美元 创影史纪录</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11715454.md#1">师德丧尽 北大教授与多人有不正当关系</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712329.md#1">《假孔子之名》慕尼黑放映 揭露中共渗透</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br>香港民主运动持续进行。圣诞节将近， ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701016.md#1">美为何点名要制裁《大公报》《文汇报》</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716284.md#1">新闻自由恶化 中共今年监禁记者数全球第一</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11707663.md#1">美图片商配合中共建黑名单 员工请愿喊停</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723534.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/protest-1-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br>网上流传的一段视频显示，上海市民于 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714651.md#1">国际人权日 多位大陆维权人士被控制不能外出</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713727.md#1">参加人权日活动 美驻华大使馆前数十人被抓</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713745.md#1">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11707400.md#1">疫苗受害儿童到北京卫健委维权 有家长被拘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/5/n11703901.md#1">华为失民心 孟晚舟鸡汤信败给李洪元251</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
+<br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/nsc413_2.md#1">更多......</a></p></td><td VALIGN=TOP rowspan=6 width="156" align="middle"><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1034.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演">神韵古典舞表演</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/?k2=vsXGwA" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党">九评共产党</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/?k2=1tW8q8S_tcQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的">共产主义终极目的</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1107.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局"">中共的伪火骗局"</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1106.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例">剖析1400例</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1044.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程">通往天安门的旅程</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/49.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话">未来人的神话故事</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/2.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石">古今奇观-藏字石</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/144.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘">中共罪恶的活摘</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1080.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山">铁证如山</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/149.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政">一家四口死于暴政</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/150.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害">弟妹相继死于迫害</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/154.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死">她们被中共迫害死</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/153.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪">双城血泪</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/21.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护">无罪辩护震撼人心</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/158.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720">从610到720</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/30.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择">中共官员的选择</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1103.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相">万人上访真相</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/121.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子">被迫害的清华学子</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/14.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513">见证513</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1096.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道">功夫 寻道</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/1104.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹">歌唱家的人生奇迹</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/165.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择">名校精英的选择</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/18.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事">音乐之家的故事</a><br><a href="https://d8ubjr6fwvb4i.cloudfront.net/video/play/33.html" target="_blank"><img width="130" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡">平凡中的不平凡</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢">善良女士被投男牢</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘">警卫目击中共活摘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路">马克思的成魔之路</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报">303万人的举报</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差">海峡两岸强烈反差</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方">印度媒体报道东方</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/nhrnni253/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园">不一样的海外校园</a><br>
+<tr><td VALIGN=TOP width="355"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731125.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1410140122312483-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11731125.md#1">河北蠡县三任派出所所长壮年暴死</a><br>自1999到2011年，河北省蠡县鲍墟乡有 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731456.md#1">【唐靖远快评】中共战狼式大外宣频频触礁</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729423.md#1">吉林访民出狱后续遭警方骚扰 生活在恐惧中</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729410.md#1">【拍案惊奇】香港“被”字恐惧与黄色经济核弹</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728703.md#1">台湾人为大陆游客展现的独特“风景线”</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11725052.md#1">美国会议员：中共将垮台 支持中国人退党</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/000_1LA7LC-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729311.md#1">莱特希泽：美中协议以书面呈现 完全可执行</a><br>周二（12月17日），美国贸易代表罗伯 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729379.md#1">川普若连任 北京将面对哪些经贸压力</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729036.md#1">穆迪：中国企业债务是全球经济最大威胁</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729168.md#1">A股550公司业绩预告 料过半企业亏损或下滑</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729038.md#1">中共央行外汇占款连降16个月 降幅扩大</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729060.md#1">中共补贴企业数据曝光 中石化和广汽获最多</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/11/1309022005342192-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729318.md#1">美2020国防授权法案 关注中共干预台湾选举</a><br>周二（12月17日），美国参议院以86比 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728683.md#1">【直播回放】台湾立委与政党票号次抽签</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729095.md#1">确定当渣哥九龙湾店长一天 王宗尧获网民力挺</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11729071.md#1">删“自由”增党控 复旦章程大变脸引炮轰</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728635.md#1">沉寂一年正式复出 范冰冰连续两天受邀走红毯</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728981.md#1">村民疑政府易地建火葬场 茂名再爆警民冲突</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1188987959-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727104.md#1">受天气影响 大陆11省逾百条高速路被封闭</a><br>大陆多地因受雨雪天气、大雾天气影响 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729550.md#1">贵州煤矿事故致16死 四川渗水事故致5死</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729297.md#1">四川内江5.2级地震 周边多地有震感</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727202.md#1">浙江矿山塌方2千平方米厂房被埋 3人失踪</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11727111.md#1">贵州发生煤矿事故 致14人死亡2人被困</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726093.md#1">猪肉催生河南新首富 身家超千亿</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731608.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/15e1a21e1316d352_ttl7daySYx_bg1218-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731608.md#1">【拍案惊奇】弹劾案来龙去脉 罢免川普很难</a><br>周三中午，美国众议院开始了弹劾川普 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/19/n11731789.md#1">每日三退声明精选（2019/12/18）</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/18/n11729514.md#1">每日三退声明精选（2019/12/17）</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728740.md#1">抖音过滤内容 在美国受质疑 转往加拿大</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728888.md#1">赵薇零滤镜大特写曝光 网民直呼看傻眼</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728758.md#1">弹劾总统民主党双重标准 麦康奈尔否决</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721510.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/583d10679d180759dd854d7b4f86acca-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721510.md#1">中共基因编辑打造“超级猪” 学界痛批</a><br>中共正在基因编辑领域里“赶超世界” ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/13/n11721813.md#1">热依扎为角色谎称会骑马 又为圆谎落下病根</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718879.md#1">造型模仿花千骨 谢娜喊话赵丽颖：续集我接演</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716545.md#1">迪士尼电影年票房破100亿美元 创影史纪录</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11715454.md#1">师德丧尽 北大教授与多人有不正当关系</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11712329.md#1">《假孔子之名》慕尼黑放映 揭露中共渗透</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="355"><h2><p><strong>网闻禁闻</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728358.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/1912120820322188-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/17/n11728358.md#1">港人给抗议者们写圣诞卡：以后再庆祝</a><br>香港民主运动持续进行。圣诞节将近， ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/16/n11726478.md#1">中共参军许进不许出 一大学生退伍遭重罚</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/12/n11718936.md#1">美联社纪念被中共以间谍罪杀害的中国记者</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/4/n11701016.md#1">美为何点名要制裁《大公报》《文汇报》</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11716284.md#1">新闻自由恶化 中共今年监禁记者数全球第一</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11707663.md#1">美图片商配合中共建黑名单 员工请愿喊停</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid2420.md#1">更多......</a></p></td><td VALIGN=TOP width="352"><h2><p><strong>群体事件</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723534.md#1"><img width="150" align ="left" src="http://i.epochtimes.com/assets/uploads/2019/12/protest-1-150x120.jpg"></a><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/15/n11723534.md#1">网传上海市民上街抗议 高呼“打倒腐败”</a><br>网上流传的一段视频显示，上海市民于 ...<br><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/11/n11714651.md#1">国际人权日 多位大陆维权人士被控制不能外出</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713727.md#1">参加人权日活动 美驻华大使馆前数十人被抓</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/10/n11713745.md#1">藏身家具从墨西哥偷渡美国 11中国人被拘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/7/n11707400.md#1">疫苗受害儿童到北京卫健委维权 有家长被拘</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/19/12/5/n11703901.md#1">华为失民心 孟晚舟鸡汤信败给李洪元251</a><br><br><p><a href="https://github.com/nhrnni253/djy/blob/master/gb/ncid279.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="355"><h2><p><strong>九评共产党</strong></p></h2><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/19/n722529.md#1" target="_blank">【一】评共产党是什么</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/21/n723946.md#1" target="_blank">【二】评中国共产党是怎样起家的</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/23/n725597.md#1" target="_blank">【三】评中国共产党的暴政</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/25/n727814.md#1" target="_blank">【四】评共产党是反宇宙的力量</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/27/n730058.md#1" target="_blank">【五】评江泽民与中共相互利用迫害法轮功</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/11/29/n731667.md#1" target="_blank">【六】评中国共产党破坏民族文化</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/12/1/n733806.md#1" target="_blank">【七】评中国共产党的杀人历史</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/12/3/n735942.md#1" target="_blank">【八】评中国共产党的邪教本质</a><br><a href="https://github.com/nhrnni253/djy/blob/master/gb/4/12/4/n737542.md#1" target="_blank">【九】评中国共产党的流氓本性</a></td><td VALIGN=TOP width="352"><h2><p><strong>三退大潮</strong></p></h2><strong>退出中共党、团、队总人数:
 
 ```diff
